crates/tlang_parser/tests/snapshots/parser__call_return_value.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"foo()();\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 6,
        kind: Call(CallExpression(
          callee: Expr(
            id: 5,
            kind: Call(CallExpression(
              callee: Expr(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "foo",
                      span: Span(
                        start: 0,
                        end: 3,
                        start_lc: LineColumn(
                          line: 0,
                          column: 0,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 3,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 0,
                    end: 3,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 0,
                  end: 3,
                  start_lc: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                ),
              ),
              arguments: [],
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          ),
          arguments: [],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 7,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 7,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 8,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 8,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 8,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 8,
    ),
  ),
)
