crates/tlang_parser/tests/snapshots/parser__char_literal.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (r\"'a';\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 4,
        kind: Literal(Char("a")),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 3,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 3,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 4,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 4,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 4,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 4,
    ),
  ),
)
