crates/tlang_parser/tests/snapshots/parser__multi_line_comments.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"/* this is a comment */\\nlet x = 1;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 5,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 28,
              end: 29,
              start_lc: LineColumn(
                line: 1,
                column: 5,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 28,
            end: 29,
            start_lc: LineColumn(
              line: 1,
              column: 5,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 6,
            ),
          ),
        ),
        expression: Expr(
          id: 4,
          kind: Literal(UnsignedInteger(1)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 32,
            end: 33,
            start_lc: LineColumn(
              line: 1,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 10,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 24,
        end: 34,
        start_lc: LineColumn(
          line: 1,
          column: 1,
        ),
        end_lc: LineColumn(
          line: 1,
          column: 11,
        ),
      ),
      leading_comments: [
        Token(
          kind: MultiLineComment(" this is a comment "),
          span: Span(
            start: 0,
            end: 23,
            start_lc: LineColumn(
              line: 0,
              column: 0,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 23,
            ),
          ),
        ),
      ],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 34,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 1,
      column: 11,
    ),
  ),
)
