crates/tlang_parser/tests/snapshots/parser__simple_unary_not-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"not true;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 4,
        kind: UnaryOp(Not, Expr(
          id: 5,
          kind: Literal(Boolean(true)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 8,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 8,
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 8,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 8,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 9,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 9,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 9,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 9,
    ),
  ),
)
