crates/tlang_parser/tests/snapshots/parser__simple_unary_not.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"!true;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 4,
        kind: UnaryOp(Not, Expr(
          id: 5,
          kind: Literal(Boolean(true)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 1,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 1,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 5,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 5,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 6,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 6,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 6,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 6,
    ),
  ),
)
